src/css/components/_side-nav.scss
/* SIDE NAV
 * Context-sensitive links for additional actions.
============================================================================= */



.c-side-nav {
  position: relative;

  // Component size
  font-size: 1rem;

  &::before {
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;

    // Push behind parent
    z-index: -1;

    background-color: rgba(0, 0, 0, 0.8);
  }
}

  .c-side-nav__list {
    display: inline-block;
    margin: 0;
    padding: 0;

    background-color: $color-mist;

    @media (min-width: $break-md-min) {
      display: block;
    }
  }

    .c-side-nav__item {
      display: block;
      position: relative;

      &::after {
        content: '';
        position: absolute;
        height: 1px;
        bottom: 0;
        left: 0.6rem;
        right: 0.6rem;

        background-color: rgba(0, 0, 0, 0.1);

        @media (min-width: $break-md-min) {
          left: 1rem;
          right: 1rem;
        }
      }
    }

      .c-side-nav__link {
        display: flex;
        align-items: center;
        padding: 1em 1.8rem 1em 0.6em;

        outline: none;

        font-size: 1em;
        font-weight: 100;
        text-decoration: none;
        color: $color-charcoal;

        &:hover,
        &:focus {
          color: $color-white;
          background-color: $color-orange;
        }

        @media (min-width: $break-sm-min) {
          padding: 1em 2.4rem 1em 0.6em;

          font-size: 1.2em;
        }

        @media (min-width: $break-md-min) {
          padding: 0 1rem;
          height: 4em;

          font-size: 1.3em;
        }
      }

      .c-side-nav__link--muted {
        color: $color-shadow;
      }

        .c-side-nav__icon {
          width: 1em;
          height: 1em;
          margin-right: 0.2em;

          fill: currentColor;
        }

